using microscenery:core and java 8